tests/snapshots/integration_test__log_data@1160d53e7f07d89672391522c129a3cc.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-user-selinux-err.log:0"
expression: result
info: "type=USER_SELINUX_ERR msg=audit(1720378109.983:2630177): pid=1572772 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='avc:  netlink recvfrom: error 9  exe=\"/usr/lib/systemd/systemd\" sauid=0 hostname=? addr=? terminal=?'"
---
{
  "record_type": "USER_SELINUX_ERR",
  "timestamp": 1720378109983,
  "id": 2630177,
  "fields": {
    "auid": null,
    "msg": "avc:  netlink recvfrom: error 9  exe=\"/usr/lib/systemd/systemd\" sauid=0 hostname=? addr=? terminal=?",
    "pid": "1572772",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "init_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
