tests/snapshots/integration_test__log_data@12e6d02656ed068bbc2928fd7254b0e5.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-user-mgmt.log:1"
expression: result
info: "type=USER_MGMT msg=audit(1725003240.604:28251307): pid=18970 uid=0 auid=4294967295 ses=4294967295 msg='op=change-age acct=\"\" exe=\"/usr/bin/chage\" hostname=? addr=? terminal=? res=failed'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "record_type": "USER_MGMT",
  "timestamp": 1725003240604,
  "id": 28251307,
  "fields": {
    "auid": null,
    "msg": {
      "acct": "",
      "addr": null,
      "exe": "/usr/bin/chage",
      "hostname": null,
      "op": "change-age",
      "res": "failed",
      "terminal": null
    },
    "pid": "18970",
    "ses": "4294967295",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "UID": "root"
  }
}
